styles.css
:root {
    --desaturated-red: #ce9797;
    --soft-red: #f96262;
    --dark-grayish-red: #413a3a;
}

body {
    font-family: 'Josefin Sans';
    display: flex;
    margin: 0;
    overflow: hidden;
}

#content-container {
    display: flex;
    flex-direction: column;
    background-image: url('images/bg-pattern-desktop.svg');
    background-size: cover;
    width: 67vw;
    height: 100vh;
    margin: auto;
    justify-content: center;
    align-items: left;
    margin: auto;
}

#logo {
    width: 150px;
    margin: auto;
    position: fixed;
    top: 2rem;
    left: 2rem;
    margin: auto;
}

#content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 420px;
    height: 700px;
    margin: auto;
}

#content>* {
    margin: 1rem 0;
}

#portrait {
    background-image: url('images/model.jpg');
    background-size: cover;
    width: 50vw;
    height: 100vh;
}

#banner {
    text-transform: uppercase;
    font-size: 4rem;
    font-weight: 400;
    letter-spacing: .5rem;
    margin: 0;
}

#banner strong {
    font-weight: 300;
    color: var(--desaturated-red);
}

#message {
    color: var(--desaturated-red);
    font-weight: 400;
    line-height: 1.5rem;
    width: 100%;
}

form {
    width: 50%;
    /* display: flex; */
    justify-content: space-between;
    width: 100%;
    /* box-sizing: border-box; */
}

input {
    padding: .75rem 0 .75rem .75rem;
    border-radius: 2rem;
    border: 1px solid lightgrey;
    font-family: inherit;
    width: 90%;
    box-sizing: border-box;
}

input::placeholder {
    color: lightgrey;
}

button {
    position: relative;
    left: 324px;
    top: -39px;
    background-color: var(--soft-red);
    border: none;
    border-radius: 2rem;
    width: 75px;
    height: 39px;
    cursor: pointer;
    background: linear-gradient(56deg, #ee9898 0%, #f96262 100%);
    transition: box-shadow 0.3s;
}

@media screen and (max-width: 800px) {
    body {
        flex-direction: column-reverse;
        width: 100%;
    }

    #portrait {
        background-size: cover;
        background-position: center -120px;
        background-repeat: no-repeat;
        height: 33vh;
        width: 100%;
        margin: 6rem 0 0;
        
    }

    #content-container {
        width: auto;
        height: auto;
        background-image: none;
    }

    #content {
        width: 70%;
        justify-content: left;
        margin: auto;
        width: 300px;
        height: auto;
    }

    #content > * {
        text-align: center;
    }

    #banner {
        margin: 3rem 0 0;
        font-size: 3rem;
    }

    #message {
        font-size: 1rem;
    }

    button {
        left: 110px;
        width: 50px;
    }

}

